# EasyJNI

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  EasyJNI.slnx  LICENSE.txt  README.md  SECURITY.md  VMHook.slnx  cpp_best_practices_skill.md  launch_minecraft.bat  launch_minecraft.ps1  vcpkg.json  vmhook.slnx
.claude/: settings.local.json
.claude/agents/: deoptimize_methods-specialist.md  dont_inline_dont_compile-specialist.md  field_arrays_primitive-specialist.md  field_inherited-specialist.md  field_introspection-specialist.md  field_object_ref-specialist.md  field_primitives_get-specialist.md  field_set_size_guard-specialist.md  field_static-specialist.md  field_string-specialist.md  find_class_fallback-specialist.md  for_each_instance-specialist.md  for_each_loaded_class-specialist.md  for_each_thread-specialist.md  global_ref-specialist.md  hook_basic-specialist.md  hook_install_after_jit-specialist.md  hook_signature-specialist.md  hook_verify_repair-specialist.md  jni_local_ref_hygiene-specialist.md  make_unique-specialist.md  method_call_jni_fallback-specialist.md  method_call_object-specialist.md  method_call_primitives-specialist.md  method_call_string-specialist.md  method_explicit_signature-specialist.md  method_overload-specialist.md  method_static_portability-specialist.md  on_class_loaded-specialist.md  return_caller-specialist.md  return_frame_raw_access-specialist.md  return_set_arg-specialist.md  return_set_primitives-specialist.md  return_set_wrapper_null-specialist.md  return_stack_trace_depth-specialist.md  shutdown_hooks_teardown-specialist.md  watch_static_field-specialist.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  unit-tests.yml
EasyJNI/: EasyJNI.vcxproj  EasyJNI.vcxproj.filters
EasyJNI/ext/EasyJNI/: EasyJNI.hpp
EasyJNI/ext/Type/: Type.hpp
EasyJNI/ext/easy_jni/: easy_jni.hpp
EasyJNI/src/: main.cpp
Injector/: Injector.vcxproj
Injector/src/: main.cpp
VMHook/: VMHook.vcxproj  VMHook.vcxproj.filters
VMHook/ext/vmhook/: vmhook.hpp
VMHook/src/: main.cpp  test.hpp
audit/findings/: deoptimize_all_jit_compiled_methods.md  deoptimize_methods_if_predicate.md  dont_inline_dont_compile_flags.md  field_proxy_array_primitives.md  field_proxy_array_strings_objects.md  field_proxy_get_primitive_bool.md  field_proxy_get_primitive_char.md  field_proxy_get_primitive_float_double.md  field_proxy_get_primitive_int_long.md  field_proxy_inherited_protected.md  field_proxy_object_ref_unique_ptr.md  field_proxy_raw_address.md  field_proxy_set_size_guard.md  field_proxy_signature_and_compressed_oop.md  field_proxy_string_get.md  field_proxy_string_set.md  find_class_jni_fallback_chain.md  for_each_thread_legacy_thread_list_cycle.md  hook_arg_decoding_primitives.md  hook_arg_decoding_strings.md  hook_arg_decoding_wrappers.md  hook_basic_install.md  hook_chain_resume_pointer_validation.md  hook_explicit_signature_install.md  hook_install_after_jit.md  hook_unhook_double_free_safety.md  hook_verify_and_repair_modes.md  jni_delete_local_ref_table_slot_23.md  method_proxy_call_jni_fallback.md  method_proxy_call_jni_local_ref_leaks.md  method_proxy_call_return_object_wrapper.md  method_proxy_call_return_primitives.md  method_proxy_call_return_string.md  method_proxy_call_return_void.md  method_proxy_explicit_signature_overload.md  method_proxy_overload_resolution_no_signature.md  method_proxy_static_method_portability.md  method_proxy_thread_attach_cost.md  on_class_loaded_define_class_hook.md  os_protect_linux_mprotect.md  (+20 more)
audit/npnoqol/: classloader_reanchor.md  gametype_and_modules.md  global_ref_raii.md  method_enumeration.md
example/: build_and_run.bat  ci_run_tests.ps1  run_tests.bat  test_all_jdks.ps1
example/src/: Main.java  Player.java  TestTarget.java
example/vmhook/: A.java  Animal.java  B.java  CallerProbe.java  Color.java  Dog.java  Example.java  Harness.java  LateClass.java  Main.java  NestedHost.java  TickerProbe.java
injector/: injector.vcxproj
injector/src/: main.cpp
test/: vmhook_test.cpp
tests/: CMakeLists.txt  test_api_surface.cpp  test_api_surface_extended.cpp  test_array_element_helpers.cpp  test_classloader_reanchor.cpp  test_collection_type_tags.cpp  test_decode_oop_and_pointers.cpp  test_decode_u5.cpp  test_field_proxy_set_guards.cpp  test_field_proxy_value_conversions.cpp  test_global_ref.cpp  test_header_compile.cpp  test_helpers.cpp  test_iterate_entries_safety.cpp  test_jni_arg_packing.cpp  test_logging_format.cpp  test_method_enumeration.cpp  test_method_proxy_value_t.cpp  test_odr_unit_a.cpp  test_odr_unit_b.cpp  test_os_layer.cpp  test_os_protect_interaction.cpp  test_os_release_and_protect_edges.cpp  test_platform_capability_macros.cpp  test_signature_parsing.cpp  test_traits.cpp  test_traits_extra.cpp  test_unified_call_syntax.cpp  test_version_macros.cpp
tests/jvm/: harness.cpp  harness.hpp  run_local.sh
tests/jvm/modules/: collection_hash_tree_map.cpp  collection_linked_list.cpp  collection_list.cpp  collection_map.cpp  collection_set.cpp  deoptimize_methods.cpp  dont_inline_dont_compile.cpp  enum_singleton.cpp  field_arrays_object.cpp  field_arrays_primitive.cpp  field_inherited.cpp  field_introspection.cpp  field_object_ref.cpp  field_primitives_get.cpp  field_set_size_guard.cpp  field_static.cpp  field_string.cpp  find_class_fallback.cpp  for_each_instance.cpp  for_each_loaded_class.cpp  for_each_thread.cpp  global_ref.cpp  hook_basic.cpp  hook_install_after_jit.cpp  hook_signature.cpp  hook_unhook_double_free.cpp  hook_verify_repair.cpp  interface_polymorphism.cpp  jni_local_ref_hygiene.cpp  make_java_string.cpp  make_unique.cpp  method_call_jni_fallback.cpp  method_call_object.cpp  method_call_primitives.cpp  method_call_return_void.cpp  method_call_string.cpp  method_enumeration.cpp  method_explicit_signature.cpp  method_is_reference.cpp  method_overload.cpp  (+21 more)
vmhook/: vmhook.vcxproj  vmhook.vcxproj.filters
vmhook/src/: example.cpp  speedtest.cpp
(+66 files in other folders)
